--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <h1>Welcome to Firebase App</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
